<resources>
    <string name="app_name">Dovezu Beta</string>

    <string name="localProfile">Dovezu Account</string>
    <string name="facebookProfile">Facebook</string>
    <string name="twitterProfile">Twitter</string>
    <string name="googleProfile">Google</string>
    <string name="vkontakteProfile">Vkontakte</string>


    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>

    <string name="registerBtn">REGISTER</string>

    <string name="loginWindow">LOGIN</string>
    <string name="profileWindow">PROFILE</string>

    <string name="loginBtn">Login</string>
    <string name="signupBtn">Create one!</string>
    <string name="haveNoAccount">Do not have account yet?</string>
    <string name="or">or</string>


    <string name="serverMain">poputchick-server</string>
    <string name="loginMessage">Please, login</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="failureProfile">Failure to load profile</string>
    <string name="successLogin">Logged in</string>
    <string name="successFacebook">Logged in via Facebook</string>
    <string name="successTwitter">Logged in via Twitter</string>
    <string name="successGoogle">Logged in via Google</string>
    <string name="successVkontakte">Logged in via Vkontakte</string>
    <string name="noPassword">Please, enter password</string>
    <string name="noEmail">Please, enter email</string>
    <string name="noUsername">Please, enter username</string>
    <string name="noPhone">Please, enter phone number</string>


    <string name="searchTitle">Search</string>
    <string name="logout">Logout</string>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <string name="onceTrip">Once</string>
    <string name="constantlyTrip">Constantly</string>
    <string name="interCityTrip">Intercity</string>

    <string name="status">Status</string>
    <string name="startPoint">From</string>
    <string name="endPoint">To</string>
    <string name="freeSeats">Free seats</string>
    <string name="time">Time</string>
    <string name="waitTime">Wait</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
</resources>
