<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/localBtn"
        android:text="@string/localProfile"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@drawable/button_background_9"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/facebookBtn"
        android:text="@string/facebookProfile"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:background="@drawable/button_background_9"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/twitterBtn"
        android:text="@string/twitterProfile"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_9"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/googleBtn"
        android:text="@string/googleProfile"
        android:background="@drawable/button_background_9"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/vkontakteBtn"
        android:text="@string/vkontakteProfile"
        android:background="@drawable/button_background_9"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp" />

</LinearLayout>