<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:text=""
        android:background="@drawable/login_img_256"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginWindowName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/loginEmailET"
        android:layout_marginTop="10dp"
        android:layout_below="@id/loginWindowName"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"/>

    <EditText
        android:layout_height="40dp"
        android:id="@+id/loginPasswordET"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/loginEmailET"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"/>



    <Button
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:id="@+id/loginBtn"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:textSize="20sp"
        android:layout_below="@+id/loginPasswordET"
        android:background="@drawable/button_background_9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/haveNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/haveNoAccTV"/>


    <TextView
        android:id="@+id/signupLink"
        android:text="@string/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="onSignupPage"
        android:layout_alignBaseline="@id/haveNoAccTV"
        android:layout_toRightOf="@+id/haveNoAccTV"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_blue_dark"/>

</RelativeLayout>